- Paper version reduced and paperweight removed due to unit tests